refactor: Improve logging and file operations
- Disable excessive document parsing logging to reduce startup noise
- Add UTF-8 fallback handling for files with encoding issues
- Implement safe filename generation with SHA-256 hashing
- Add configurable filename length limits for filesystem compatibility
- Improve error handling for malformed input files